--- a/src/pages/Account1/userSet/userSet.less
+++ b/src/pages/Account1/userSet/userSet.less
@@ -95,3 +95,32 @@
     }
   }
 }
+
+.tableListForm {
+  :global {
+    .ant-form-item {
+      margin-bottom: 24px;
+      margin-right: 0;
+      display: flex;
+      > .ant-form-item-label {
+        width: auto;
+        line-height: 32px;
+        padding-right: 8px;
+      }
+      .ant-form-item-control {
+        line-height: 32px;
+      }
+    }
+    .ant-form-item-control-wrapper {
+      flex: 1;
+    }
+  }
+  .submitButtons {
+    display: block;
+    white-space: nowrap;
+    margin-bottom: 24px;
+  }
+}
+.collection-create-form_last-form-item {
+  margin-bottom: 0;
+}
