--- a/src/pages/Account1/userSet/userSet.less
+++ b/src/pages/Account1/userSet/userSet.less
@@ -124,3 +124,22 @@
 .collection-create-form_last-form-item {
   margin-bottom: 0;
 }
+
+.radio {
+  :global {
+    .ant-radio-button-wrapper {
+      width: 50%;
+      text-align: center;
+    }
+    .ant-radio-group {
+      width: 100%;
+    }
+  }
+}
+.cardhead {
+  :global {
+    .ant-card-head {
+      margin-bottom: -55px;
+    }
+  }
+}
