--- a/src/pages/Account1/Permission/permission.less
+++ b/src/pages/Account1/Permission/permission.less
@@ -13,3 +13,11 @@
     margin-right: 8px;
   }
 }
+.iconlist {
+  :global {
+    .anticon {
+      margin-right: 10px;
+      margin-left: 10px;
+    }
+  }
+}
