--- a/src/pages/Account1/BussinessUserSet.less
+++ b/src/pages/Account1/BussinessUserSet.less
@@ -47,3 +47,12 @@
     margin-right: 8px;
   }
 }
+
+.buttonColor {
+  :global {
+    .ant-btn-primary {
+      background-color: #c092f2;
+      border-color: #c092f2;
+    }
+  }
+}
