--- a/src/pages/Account1/BussinessUserSet.less
+++ b/src/pages/Account1/BussinessUserSet.less
@@ -51,7 +51,7 @@
 .buttonColor {
   :global {
     .ant-btn-primary {
-      background-color: #c092f2;
+      background: #c092f2;
       border-color: #c092f2;
     }
   }
