--- a/src/pages/Account1/PermissionSet.less
+++ b/src/pages/Account1/PermissionSet.less
@@ -22,3 +22,12 @@
     }
   }
 }
+
+.buttonColor {
+  :global {
+    .ant-btn-primary {
+      background: #c092f2;
+      border-color: #c092f2;
+    }
+  }
+}
