--- a/src/pages/Account1/UserSet.less
+++ b/src/pages/Account1/UserSet.less
@@ -65,3 +65,12 @@
     margin-left: 4px;
   }
 }
+
+.buttonColor {
+  :global {
+    .ant-btn-primary {
+      background: #c092f2;
+      border-color: #c092f2;
+    }
+  }
+}
