--- a/src/pages/Process/ProcessQuery.less
+++ b/src/pages/Process/ProcessQuery.less
@@ -36,6 +36,15 @@
   }
 }
 
+.buttonColor {
+  :global {
+    .ant-btn-primary {
+      background: #c092f2;
+      border-color: #c092f2;
+    }
+  }
+}
+
 @media screen and (max-width: @screen-lg) {
   .tableListForm :global(.ant-form-item) {
     margin-right: 24px;
