--- a/src/pages/Process/ProcessTask.less
+++ b/src/pages/Process/ProcessTask.less
@@ -61,8 +61,9 @@
     }
   }
   .projectGrid {
-    width: 33.33%;
-    height: 50%;
+    width: 32%;
+    height: 30%;
+    margin-left: 1%;
   }
   .projectItemContent {
     display: flex;
@@ -140,8 +141,8 @@
 .buttonColor {
   :global {
     .ant-btn-primary {
-      background-color: #c092f2;
-      border-color: #c092f2;
+      background: #40a9ff;
+      border-color: #40a9ff;
     }
   }
 }
