--- a/src/pages/Account1/PermissionSet.less
+++ b/src/pages/Account1/PermissionSet.less
@@ -26,8 +26,8 @@
 .buttonColor {
   :global {
     .ant-btn-primary {
-      background: #c092f2;
-      border-color: #c092f2;
+      background: #40a9ff;
+      border-color: #40a9ff;
     }
   }
 }
