--- a/src/pages/Dashboard/Workplace.less
+++ b/src/pages/Dashboard/Workplace.less
@@ -157,8 +157,12 @@
     }
   }
   .projectGrid {
-    width: 33.33%;
-    height: 50%;
+    width: 30.33%;
+    margin-left: 23px;
+    margin-top: 12px;
+    background: #fff;
+    padding-top: 17px;
+    padding-bottom: 17px;
   }
   .projectItemContent {
     display: flex;
