--- a/src/pages/Process/ProcessTask.less
+++ b/src/pages/Process/ProcessTask.less
@@ -61,9 +61,13 @@
     }
   }
   .projectGrid {
-    width: 32%;
-    height: 30%;
-    margin-left: 1%;
+    width: 31.33%;
+    height: 50%;
+    background: #fff;
+    margin-left: 27px;
+    margin-top: 12px;
+    padding-top: 45px;
+    padding-bottom: 45px;
   }
   .projectItemContent {
     display: flex;
