--- a/src/components/StandardTable/index.less
+++ b/src/components/StandardTable/index.less
@@ -5,6 +5,13 @@
     .ant-table-pagination {
       margin-top: 24px;
     }
+    .ant-table td {
+      white-space: nowrap;
+    }
+    .ant-table-thead > tr > th.ant-table-column-has-actions.ant-table-column-has-sorters,
+    .ant-table-thead > tr > th.ant-table-column-has-actions.ant-table-column-has-filters {
+      white-space: nowrap;
+    }
   }
 
   .tableAlert {
