--- a/src/pages/Dashboard/Workplace.less
+++ b/src/pages/Dashboard/Workplace.less
@@ -157,12 +157,12 @@
     }
   }
   .projectGrid {
-    width: 30.33%;
-    margin-left: 23px;
+    width: 100%;
+    // margin-left: 23px;
     margin-top: 12px;
     background: #fff;
-    padding-top: 17px;
-    padding-bottom: 17px;
+    // padding-top: 17px;
+    // padding-bottom: 17px;
   }
   .projectItemContent {
     display: flex;
