--- a/src/pages/Process/ProcessTask.less
+++ b/src/pages/Process/ProcessTask.less
@@ -61,13 +61,14 @@
     }
   }
   .projectGrid {
-    width: 31.33%;
-    height: 50%;
+    // width: 31.33%;
+    // height: 50%;
     background: #fff;
-    margin-left: 27px;
+    width: 100%;
+    // margin-left: 27px;
     margin-top: 12px;
-    padding-top: 45px;
-    padding-bottom: 45px;
+    // padding-top: 45px;
+    // padding-bottom: 45px;
   }
   .projectItemContent {
     display: flex;
